Adjusted cron, adjusted to use vulnz-5.1.0.jar for api feeds